added GPA, best dissertation, small modifications on others

--- a/cv.tex
+++ b/cv.tex
@@ -32,14 +32,17 @@
  % Your phone number and email
 
 \begin{document}
-
+\begin{rSection}{Objective}
+Seeking a software engineer intership for 2017 summer
+\end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
 {\bf Texas A\&M University} \hfill {\bf College Station, TX} 
-\\ Master of Science in Computer Science \hfill {\em Expected Graduation: July, 2018}
+\\ Master of Science in Computer Science \hfill {\em Expected Graduation: May, 2018}
+\\ GPA: 3.67/4.00
 \vspace*{-0.2em}
 
 {\bf Harbin Institute of Technology} \hfill {\bf Weihai, China} 
@@ -52,6 +55,8 @@
 
 
 \end{rSection}
+
+
 %----------------------------------------------------------------------------------------
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
@@ -171,14 +176,16 @@ Inter-PL (Programming Language) API search engine
 
 
 \begin{rSection}{Honors\&Awards}
-
-{\bf 1st Prize in National Robot Championship} \hfill {July 2015}
+{\bf Best Paper Award}{ for Outstanding Bachelor Dissertation} \hfill {July 2015}
 \vspace*{-0.4em}
 
-{\bf Honorable Mention in Mathematical Contest in Modeling (MCM)} \hfill {Apr. 2015}
+{\bf Meritorious Winner(1st Prize)}{ in National Robot Championship} \hfill {July 2015}
 \vspace*{-0.4em}
 
-{\bf 2nd Prize in Software Design Competition} \hfill {Mar. 2014} 
+{\bf Honorable Mention}{ in Mathematical Contest in Modeling (MCM)} \hfill {Apr. 2015}
+\vspace*{-0.4em}
+
+{\bf 2nd Place}{ in HIT Software Design Competition} \hfill {Mar. 2014} 
 \vspace*{-0.4em}
 
 {\bf People's Scholarship} 5 times \hfill {Oct. 2013, Oct. 2014, May 2015, Oct. 2015, Apr. 2016}
