added more techniques keywords in the resume, delete grader part for work cv

--- a/cv.tex
+++ b/cv.tex
@@ -79,16 +79,14 @@ Seeking a software engineer intership for 2017 summer
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Experience}
 \begin{rSubsection}{Graduate Researcher}{College Station, TX}{Parasol Lab, supervised by Prof. Nancy M. Amato}{Sep. 2016 - Present}
-\item Developed a self-motivated Robotics Motion Planner with Midpoint Guided Sampling
+\item Designed and implemented several Robot Motion Planner with Midpoint Guided Sampling
+\item Experiences in working with robotic fundamentals, like VIZMO++ (robot motion planning visualization), PMPL(Parasol Motion Planning Library)
 \item Researching on simulating robot group behavior, e.g., Multi Robot Persistent Coverage Problem simulation
-\end{rSubsection}
-\begin{rSubsection}{Grader}{College Station, TX}{CSCE 410 Operating Systems, Prof. Dilma Da Silva}{Sep. 2016 - Present}
-\item Developed test case for grading projects, built automated testing environment, answered students' questions
 \end{rSubsection}
 
 \begin{rSubsection}{Software Engineer Intern}{Shenzhen, China}{ARRIS Group}{Jan. - May 2016}
-\item Benchmarked network performance of our product to track performance bottlenecks and improve modem bandwidth
-\item Revised routing architecture to achieve proper LAN connectivity and meantime ensure overall security
+\item Automated signal-free wireless testing environment setup and modem performance benchmarking
+\item Modem routing architecture modification for security reinforcement
 \end{rSubsection}
 \begin{rSubsection}{Co-Chair}{Weihai, China}{HIT Robot Innovation Workshop}{May 2015 - Jan. 2016}
 \item Led the development of two competition projects in National Robot Championship
@@ -100,11 +98,12 @@ Seeking a software engineer intership for 2017 summer
 \begin{rSubsection}{Mobile Storm: Distributed real-time stream processing for mobile cloud}{Research Assistant}{}{}
 \item Proposed greedy and genetic algorithms for job topology allocation on multi workers with varying executors (NP-Hard), generally yields results within $30\%$ gap comparing to near-optimal solution (CPLEX) but runs 100x faster
 \item Developed a Neural-like topology generator for job submission simulation to test our allocation algorithm
-\item Working on distributed streaming face recognition applications for real-world application experiments
+\item Working on distributed streaming face recognition applications for real-world application experiments, which involves socket communication, multi-threading, stream processing, etc.
 
 \end{rSubsection}
 
 \begin{rSubsection}{High-responsive scheduling for heterogeneous Hadoop YARN cluster}{Research Assistant}{}{}
+\item Experiences in Hadoop YARN basics like cluster setup and maintenance, Hadoop APIs (including RESTful APIs)
 \item Developed a cloud computing benchmark suite to test performance of heterogeneous Hadoop YARN cluster running multi frameworks like MapReduce, Spark, etc
 \item Proposed a novel job size prediction approach based on Machine Learning techniques and designed a size-based scheduling framework, which substantially improved the responsiveness of Hadoop cluster
 
