the first version of somewhat complete resume, added activities, all intern included, need to fill in the new ICDCS paper still

--- a/cv.tex
+++ b/cv.tex
@@ -34,7 +34,7 @@
 
 \begin{document}
 \begin{rSection}{Objective}
-Seeking a software/research internship for 2017 summer, see \href{https://github.com/vincenttsang}{Github} and \href{https://parasol.tamu.edu/~yzeng/}{Homepage} for more info about me
+Seeking full-time software/research internship for 2017 summer, see \href{https://github.com/vincenttsang}{Github} and \href{https://parasol.tamu.edu/~yzeng/}{Homepage} for more about me
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -78,28 +78,38 @@ Seeking a software/research internship for 2017 summer, see \href{https://github
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
-\begin{rSection}{Experience}
+\begin{rSection}{Research Experience}
 \begin{rSubsection}{Graduate Researcher}{College Station, TX}{Parasol Lab, supervised by Prof. Nancy M. Amato}{Sep. 2016 - Present}
-\item Designed and implemented several Robot Motion Planner with Midpoint Guided Sampling
+\item Implemented simple EST motion planner and improved it with single-shot midpoint guided sampling
 \item Experiences in working with robotic fundamentals libraries, like \href{https://parasol.tamu.edu/groups/amatogroup/research/UserGuided/Old/vizmo++/}{VIZMO++}, PMPL(Parasol Motion Planning Library), and with parallel computing library (\href{https://parasol.tamu.edu/groups/rwergergroup/research/stapl/}{STAPL}) for improving motion planning performance
 \item Generalizing embedding graph, flow graph and dynamic region utilities used in \href{http://wafr2016.berkeley.edu/papers/WAFR_2016_paper_36.pdf}{Dynamic Region-biased RRT}
 \end{rSubsection}
 
-\begin{rSubsection}{Software Engineer Intern}{Shenzhen, China}{ARRIS Group}{Jan. - May 2016}
-\item Automated signal-free wireless testing environment setup and modem performance benchmarking
-\item Modem routing architecture modification for security reinforcement
-\end{rSubsection}
 \begin{rSubsection}{Co-Chair}{Weihai, China}{HIT Robot Innovation Workshop}{May 2015 - Jan. 2016}
 \item Led the development of two competition projects in National Robot Championship
 \item Used RoboBasic to develop a matrix approach of stable robot gait planning for RoboNova series robots
 \end{rSubsection}
+
 \end{rSection}
+
+\begin{rSection}{Work Experience}
+\begin{rSubsection}{Software Engineer Intern}{Shenzhen, China}{ARRIS Group}{Jan. - May 2016}
+\item Automated signal-free wireless testing environment setup and modem performance benchmarking
+\item Modem routing architecture modification for security reinforcement
+\end{rSubsection}
+
+\begin{rSubsection}{Technical Solution Intern}{Dalian, China}{Neusoft}{July 2014 - Aug. 2014}
+\item Neusoft IM (Instant Message) System development in Java with multithread chating, socket communication, real-time server monitoring and persistent data storage using Oracle DB
+\end{rSubsection}
+\end{rSection}
+
+
 
 \begin{rSection}{Selected Projects}
 \begin{rSubsection}{\href{http://ieeexplore.ieee.org/document/7335296/?arnumber=7335296}{Mobile Storm: Distributed Real-time Stream Processing for Mobile Cloud}}{Research Assistant}{}{}
 \item Proposed greedy and genetic algorithms for job topology allocation on multi workers with varying executors (NP-Hard), generally yields results within $30\%$ gap comparing to near-optimal solution (CPLEX) but runs 100x faster
 \item Developed a Neural-like topology generator for job submission simulation to test our allocation algorithm
-\item Working on distributed streaming face recognition applications for real-world application experiments, which involves socket communication, multi-threading, stream processing, etc
+\item Integrating facial processing utilities (including face detection, recognition, tracking, etc) and distributed computational tasks on MobiStorm platform, involving socket communication, multi-threading, stream processing, etc
 
 \end{rSubsection}
 
@@ -191,6 +201,31 @@ Inter-PL (Programming Language) API search engine
 {\bf People's Scholarship} 5 times \hfill {Oct. 2013, Oct. 2014, May 2015, Oct. 2015, Apr. 2016}
 \vspace*{-0.4em}
 
+\end{rSection}
+
+\begin{rSection}{Professional Activities}
+{\bf Student Volunteer}\hfill Weihai, China\\
+HIT-MSRA Language Technology Summer School\hfill {\emph July, 2013}
+\vspace*{-0.2em}
+
+{\bf Peer Reviewer}\hfill College Station, TX\\
+IEEE Transactions on Robotics (T-RO)\\
+IEEE Robotics and Automation Letters (RA-L)\\
+Springer Journal of Intelligent \& Robotic Systems (JINT)\\
+ACM Transactions on Spatial Algorithms and Systems (TSAS)\\
+IEEE International Conference on Robotics and Automation (ICRA)\hfill {\emph Sep. 2016 -- Present}
+
+{\bf }
+\end{rSection}
+
+\begin{rSection}{Teaching Experience}
+\begin{rSubsection}{Grader}{College Station, TX}{Texas A\&M University}{Sep. - Dec. 2016}
+\item Test case development and test automation for \href{http://faculty.cse.tamu.edu/dilma/web-csce410-fall16/index.htm}{CSCE410 Operating Systems}, involving frame management, memory paging, virtual memory, thread scheduling, device driver and file systems
+\end{rSubsection}
+
+\begin{rSubsection}{Teaching Assistant}{Weihai, China}{Harbin Inst. of Tech.}{Sep. 2014 - June 2016}
+\item Including the following major courses: Database Systems, Computer Networking, Operating Systems, Compiler Principles, Object-Oriented Programming, etc
+\end{rSubsection}
 \end{rSection}
 
 \end{document}
