--- a/cv.tex
+++ b/cv.tex
@@ -85,7 +85,7 @@ Seeking full-time software/research internship for 2017 summer, see \href{https:
 \item Generalizing embedding graph, flow graph and dynamic region utilities used in \href{http://wafr2016.berkeley.edu/papers/WAFR_2016_paper_36.pdf}{Dynamic Region-biased RRT}
 \end{rSubsection}
 
-\begin{rSubsection}{Co-Chair}{Weihai, China}{HIT Robot Innovation Workshop}{May 2015 - Jan. 2016}
+\begin{rSubsection}{Team Leader}{Weihai, China}{HIT Robot Innovation Lab}{May 2015 - Jan. 2016}
 \item Led the development of two competition projects in National Robot Championship
 \item Used RoboBasic to develop a matrix approach of stable robot gait planning for RoboNova series robots
 \end{rSubsection}
@@ -174,6 +174,14 @@ Inter-PL (Programming Language) API search engine
 % \\ \itab{Process Control (ongoing)} \tab{} \tab{Electrodynamics}
 
 %\end{rSection}
+
+\begin{rSection}{Course Projects}
+{\bf CSCE 614 Computer Architecture}\hfill {\emph Daniel Jimenez}\\
+Cache behavior simulator with LRU and random replacement\\
+\href{https://github.com/vincenttsang/CompArch/blob/master/branch-predictor/p1-final-report/p1-final-report.pdf}{Fast path-based neural branch predictor with perceptron}\\
+\href{https://github.com/vincenttsang/CompArch/blob/master/cache-replacer/p2-final-report/p2-final-report.pdf}{High performance cache replacement using re-reference interval prediction (RRIP)}
+\end{rSection}
+
 \begin{rSection}{Publications}
 
 {[1]Liu, Yang, }\underline{\bf Yukun Zeng}{ and Xuefeng Piao. ``High-Responsive Scheduling with MapReduce Performance Prediction on Hadoop YARN.'' Embedded and Real-Time Computing Systems and Applications (RTCSA), 2016 IEEE 22nd International Conference on. IEEE, 2016.
@@ -183,7 +191,6 @@ Inter-PL (Programming Language) API search engine
 {[2]Gaoyang Li, Guangri Quan, }\underline{\bf Yukun Zeng}{, ``MASS: A short reads alignment tool oriented to massive}{data,'' The Workshop on Algorithms in Bioinformatics 2016, submitted.}
 
 \end{rSection}
-
 
 \begin{rSection}{Honors\&Awards}
 {\bf Best Paper Award}{ for Outstanding Bachelor Dissertation} \hfill {July 2016}
@@ -214,8 +221,6 @@ IEEE Robotics and Automation Letters (RA-L)\\
 Springer Journal of Intelligent \& Robotic Systems (JINT)\\
 ACM Transactions on Spatial Algorithms and Systems (TSAS)\\
 IEEE International Conference on Robotics and Automation (ICRA)\hfill {\emph Sep. 2016 -- Present}
-
-{\bf }
 \end{rSection}
 
 \begin{rSection}{Teaching Experience}
