--- a/cv.tex
+++ b/cv.tex
@@ -34,7 +34,7 @@
 
 \begin{document}
 \begin{rSection}{Objective}
-Seeking full-time software/research internship for 2017 summer, see \href{https://github.com/vincenttsang}{Github} and \href{https://parasol.tamu.edu/~yzeng/}{Homepage} for more about me
+Seeking full-time software/research intern for 2017 summer, see \href{https://github.com/vincenttsang}{Github} and \href{https://parasol.tamu.edu/~yzeng/}{Homepage} for more info about me
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -176,19 +176,19 @@ Inter-PL (Programming Language) API search engine
 %\end{rSection}
 
 \begin{rSection}{Course Projects}
-{\bf CSCE 614 Computer Architecture}\hfill {\emph Daniel Jimenez}\\
-Cache behavior simulator with LRU and random replacement\\
+{\bf CSCE 614 Computer Architecture}\hfill {\emph advised by Daniel A. Jimenez}\\
+Cache behavior simulator with LRU and random replacement policies\\
 \href{https://github.com/vincenttsang/CompArch/blob/master/branch-predictor/p1-final-report/p1-final-report.pdf}{Fast path-based neural branch predictor with perceptron}\\
 \href{https://github.com/vincenttsang/CompArch/blob/master/cache-replacer/p2-final-report/p2-final-report.pdf}{High performance cache replacement using re-reference interval prediction (RRIP)}
 \end{rSection}
 
 \begin{rSection}{Publications}
-
-{[1]Liu, Yang, }\underline{\bf Yukun Zeng}{ and Xuefeng Piao. ``High-Responsive Scheduling with MapReduce Performance Prediction on Hadoop YARN.'' Embedded and Real-Time Computing Systems and Applications (RTCSA), 2016 IEEE 22nd International Conference on. IEEE, 2016.
+{[1]Mengyuan Chao, }\underline{\bf Yukun Zeng}{ and Radu Stoleru. ``FCS: Feedback-based Customizable Scheduling For Stream Processing On Heterogeneous Mobile Devices.'' The 37th IEEE International Conference on Distributed Computing Systems (ICDCS 2017). \emph{In Progress}.
 }
 \vspace*{-0.2em}
 
-{[2]Gaoyang Li, Guangri Quan, }\underline{\bf Yukun Zeng}{, ``MASS: A short reads alignment tool oriented to massive}{data,'' The Workshop on Algorithms in Bioinformatics 2016, submitted.}
+{[2]Yang Liu, }\underline{\bf Yukun Zeng}{ and Xuefeng Piao. ``High-Responsive Scheduling with MapReduce Performance Prediction on Hadoop YARN.'' Embedded and Real-Time Computing Systems and Applications (RTCSA), 2016 IEEE 22nd International Conference on. IEEE, 2016.
+}
 
 \end{rSection}
 
@@ -196,7 +196,7 @@ Cache behavior simulator with LRU and random replacement\\
 {\bf Best Paper Award}{ for Outstanding Bachelor Dissertation} \hfill {July 2016}
 \vspace*{-0.4em}
 
-{\bf Meritorious Winner(1st Prize)}{ in National Robot Championship} \hfill {July 2015}
+{\bf Meritorious Winner(1st Place)}{ in National Robot Championship} \hfill {July 2015}
 \vspace*{-0.4em}
 
 {\bf Honorable Mention}{ in Mathematical Contest in Modeling (MCM)} \hfill {Apr. 2015}
@@ -212,7 +212,7 @@ Cache behavior simulator with LRU and random replacement\\
 
 \begin{rSection}{Professional Activities}
 {\bf Student Volunteer}\hfill Weihai, China\\
-HIT-MSRA Language Technology Summer School\hfill {\emph July, 2013}
+HIT-MSRA Human Language Technology Summer School\hfill {\emph July, 2013}
 \vspace*{-0.2em}
 
 {\bf Peer Reviewer}\hfill College Station, TX\\
