added . to every description sentence...

--- a/cv.tex
+++ b/cv.tex
@@ -34,7 +34,7 @@
 
 \begin{document}
 \begin{rSection}{Objective}
-Seeking full-time software/research intern for 2017 summer, see \href{https://github.com/vincenttsang}{Github} and \href{https://parasol.tamu.edu/~yzeng/}{Homepage} for more info about me
+Seeking full-time software/research intern for 2017 summer, see \href{https://github.com/vincenttsang}{Github} and \href{https://parasol.tamu.edu/~yzeng/}{Homepage} for more info about me.
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -80,26 +80,26 @@ Seeking full-time software/research intern for 2017 summer, see \href{https://gi
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Research Experience}
 \begin{rSubsection}{Graduate Researcher}{College Station, TX}{Parasol Lab, supervised by Prof. Nancy M. Amato}{Sep. 2016 - Present}
-\item Implemented simple EST motion planner and improved it with single-shot midpoint guided sampling
-\item Experiences in working with robotic fundamentals libraries, like \href{https://parasol.tamu.edu/groups/amatogroup/research/UserGuided/Old/vizmo++/}{VIZMO++}, PMPL(Parasol Motion Planning Library), and with parallel computing library (\href{https://parasol.tamu.edu/groups/rwergergroup/research/stapl/}{STAPL}) for improving motion planning performance
-\item Generalizing embedding graph, flow graph and dynamic region utilities used in \href{http://wafr2016.berkeley.edu/papers/WAFR_2016_paper_36.pdf}{Dynamic Region-biased RRT}
+\item Implemented simple EST motion planner and improved it with single-shot midpoint guided sampling.
+\item Experiences in working with robotic fundamentals libraries, like \href{https://parasol.tamu.edu/groups/amatogroup/research/UserGuided/Old/vizmo++/}{VIZMO++}, PMPL(Parasol Motion Planning Library), and with parallel computing library (\href{https://parasol.tamu.edu/groups/rwergergroup/research/stapl/}{STAPL}) for improving motion planning performance.
+\item Generalizing embedding graph, flow graph and dynamic region utilities used in \href{http://wafr2016.berkeley.edu/papers/WAFR_2016_paper_36.pdf}{Dynamic Region-biased RRT}.
 \end{rSubsection}
 
 \begin{rSubsection}{Team Leader}{Weihai, China}{HIT Robot Innovation Lab}{May 2015 - Jan. 2016}
-\item Led the development of two competition projects in National Robot Championship
-\item Used RoboBasic to develop a matrix approach of stable robot gait planning for RoboNova series robots
+\item Led the development of two competition projects in National Robot Championship.
+\item Used RoboBasic to develop a matrix approach of stable robot gait planning for RoboNova series robots.
 \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Work Experience}
 \begin{rSubsection}{Software Engineer Intern}{Shenzhen, China}{ARRIS Group}{Jan. - May 2016}
-\item Automated signal-free wireless testing environment setup and modem performance benchmarking
-\item Modem routing architecture modification for security reinforcement
+\item Automated signal-free wireless testing environment setup and modem performance benchmarking.
+\item Modem routing architecture modification for security reinforcement.
 \end{rSubsection}
 
 \begin{rSubsection}{Technical Solution Intern}{Dalian, China}{Neusoft}{July 2014 - Aug. 2014}
-\item Neusoft IM (Instant Message) System development in Java with multithread chating, socket communication, real-time server monitoring and persistent data storage using Oracle DB
+\item Neusoft IM (Instant Message) System development in Java with multithread chating, socket communication, real-time server monitoring and persistent data storage using Oracle DB.
 \end{rSubsection}
 \end{rSection}
 
@@ -107,16 +107,16 @@ Seeking full-time software/research intern for 2017 summer, see \href{https://gi
 
 \begin{rSection}{Selected Projects}
 \begin{rSubsection}{\href{http://ieeexplore.ieee.org/document/7335296/?arnumber=7335296}{Mobile Storm: Distributed Real-time Stream Processing for Mobile Cloud}}{Research Assistant}{}{}
-\item Proposed greedy and genetic algorithms for job topology allocation on multi workers with varying executors (NP-Hard), generally yields results within $30\%$ gap comparing to near-optimal solution (CPLEX) but runs 100x faster
-\item Developed a Neural-like topology generator for job submission simulation to test our allocation algorithm
-\item Integrating facial processing utilities (including face detection, recognition, tracking, etc) and distributed computational tasks on MobiStorm platform, involving socket communication, multi-threading, stream processing, etc
+\item Proposed greedy and genetic algorithms for job topology allocation on multi workers with varying executors (NP-Hard), generally yields results within $30\%$ gap comparing to near-optimal solution (CPLEX) but runs 100x faster.
+\item Developed a Neural-like topology generator for job submission simulation to test our allocation algorithm.
+\item Integrating facial processing utilities (including face detection, recognition, tracking, etc) and distributed computational tasks on MobiStorm platform, involving socket communication, multi-threading, stream processing, etc.
 
 \end{rSubsection}
 
 \begin{rSubsection}{\href{http://ieeexplore.ieee.org/document/7579961/}{Hi-Responsive Scheduling with MR Performance Prediction on Hadoop YARN}}{Research Assistant}{}{}
-\item Experiences in Hadoop YARN basics like cluster setup and maintenance, Hadoop APIs (including RESTful APIs)
-\item Developed a cloud computing benchmark suite to test performance of heterogeneous Hadoop YARN cluster running multi frameworks like MapReduce, Spark, etc
-\item Proposed a novel job size prediction approach based on Machine Learning techniques and designed a size-based scheduling framework, which substantially improved the responsiveness of Hadoop cluster
+\item Experiences in Hadoop YARN basics like cluster setup and maintenance, Hadoop APIs (including RESTful APIs).
+\item Developed a cloud computing benchmark suite to test performance of heterogeneous Hadoop YARN cluster running multi frameworks like MapReduce, Spark, etc.
+\item Proposed a novel job size prediction approach based on Machine Learning techniques and designed a size-based scheduling framework, which substantially improved the responsiveness of Hadoop cluster.
 
 \end{rSubsection}
 
@@ -131,24 +131,24 @@ Seeking full-time software/research intern for 2017 summer, see \href{https://gi
 %------------------------------------------------
 
 \begin{rSubsection}{Flash Vocabulary - Lightweight website for boosting vocabulary online}{Leader}{}{}
-\item Devised a novel MVC-derived pattern that best fits the interaction mode of our website
-\item Developed a comprehensive front-end framework to simplify front-end codes and create a universal UI
-\item Adopted AJAX and HTML5 Local Storage to avoid unnecessary reloading and enhance user experience
+\item Devised a novel MVC-derived pattern that best fits the interaction mode of our website.
+\item Developed a comprehensive front-end framework to simplify front-end codes and create a universal UI.
+\item Adopted AJAX and HTML5 Local Storage to avoid unnecessary reloading and enhance user experience.
 \end{rSubsection}
 
 %------------------------------------------------
 
 \begin{rSubsection}{Jizhi Tutor Service - Online edu platform on Cloud}{Co-Leader}{}{}
-\item Applied HTML, CSS, Javascript (JQuery) to the front-end dev, used complex SQL Server database (with triggers, view, stored procedure, etc) and .NET platform for data storage and business logic
-\item Lead the entire platform dev from designing, implementation to Cloud deployment and maintenance
+\item Applied HTML, CSS, Javascript (JQuery) to the front-end dev, used complex SQL Server database (with triggers, view, stored procedure, etc) and .NET platform for data storage and business logic.
+\item Lead the entire platform dev from designing, implementation to Cloud deployment and maintenance.
 \end{rSubsection}
 
 %------------------------------------------------
 
 \begin{rSubsection}{General Coding - An APP to improve programmers' productivity}{Key Developer}{}{}
-\item Developed the APP which highlights on improving user experience by optimizing data structure and algorithms, extensible to multi programming language API integration
+\item Developed the APP which highlights on improving user experience by optimizing data structure and algorithms, extensible to multi programming language API integration.
 \item Implemented an objective linked-list and fuzzy query algorithm (Levenshtein Distance) in our Full-Text
-Inter-PL (Programming Language) API search engine
+Inter-PL (Programming Language) API search engine.
 \end{rSubsection}
 
 
@@ -177,9 +177,9 @@ Inter-PL (Programming Language) API search engine
 
 \begin{rSection}{Course Projects}
 {\bf CSCE 614 Computer Architecture}\hfill {\emph advised by Daniel A. Jimenez}\\
-Cache behavior simulator with LRU and random replacement policies\\
-\href{https://github.com/vincenttsang/CompArch/blob/master/branch-predictor/p1-final-report/p1-final-report.pdf}{Fast path-based neural branch predictor with perceptron}\\
-\href{https://github.com/vincenttsang/CompArch/blob/master/cache-replacer/p2-final-report/p2-final-report.pdf}{High performance cache replacement using re-reference interval prediction (RRIP)}
+Cache behavior simulator with LRU and random replacement policies.\\
+\href{https://github.com/vincenttsang/CompArch/blob/master/branch-predictor/p1-final-report/p1-final-report.pdf}{Fast path-based neural branch predictor with perceptron}.\\
+\href{https://github.com/vincenttsang/CompArch/blob/master/cache-replacer/p2-final-report/p2-final-report.pdf}{High performance cache replacement using re-reference interval prediction (RRIP)}.
 \end{rSection}
 
 \begin{rSection}{Publications}
@@ -225,11 +225,11 @@ IEEE International Conference on Robotics and Automation (ICRA)\hfill {\emph Sep
 
 \begin{rSection}{Teaching Experience}
 \begin{rSubsection}{Grader}{College Station, TX}{Texas A\&M University}{Sep. - Dec. 2016}
-\item Test case development and test automation for \href{http://faculty.cse.tamu.edu/dilma/web-csce410-fall16/index.htm}{CSCE410 Operating Systems}, involving frame management, memory paging, virtual memory, thread scheduling, device driver and file systems
+\item Test case development and test automation for \href{http://faculty.cse.tamu.edu/dilma/web-csce410-fall16/index.htm}{CSCE410 Operating Systems}, involving frame management, memory paging, virtual memory, thread scheduling, device driver and file systems.
 \end{rSubsection}
 
 \begin{rSubsection}{Teaching Assistant}{Weihai, China}{Harbin Inst. of Tech.}{Sep. 2014 - June 2016}
-\item Including the following major courses: Database Systems, Computer Networking, Operating Systems, Compiler Principles, Object-Oriented Programming, etc
+\item Including the following major courses: Database Systems, Computer Networking, Operating Systems, Compiler Principles, Object-Oriented Programming, etc.
 \end{rSubsection}
 \end{rSection}
 
