added intern&grader experiences, changed robot related

--- a/cv.tex
+++ b/cv.tex
@@ -86,19 +86,25 @@ Seeking full-time software/research intern for 2017 summer, see \href{https://gi
 \end{rSubsection}
 
 \begin{rSubsection}{Team Leader}{Weihai, China}{HIT Robot Innovation Lab}{May 2015 - Jan. 2016}
-\item Led the development of two competition projects in National Robot Championship.
-\item Used RoboBasic to develop a matrix approach of stable robot gait planning for RoboNova series robots.
+\item Led team from CS department in National Robot Championship, introduced matrix-based data structure for storing robot engine parameters and developed a stable gait planning system to produce RoboBasic codes for controlling engine motions.
 \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Work Experience}
-\begin{rSubsection}{Software Engineer Intern}{Shenzhen, China}{ARRIS Group}{Jan. - May 2016}
+\begin{rSubsection}{Big Data Engineer Intern}{Big Data at AT\&T}{Dallas, TX}{June. - Aug. 2017}
+\item Fraud and erroneous payments detection by data mining millions of billing and engineering direct trunk group records with Hive and PySpark, total profits hit 1.5 million dollars.
+\item Index results using Apache Solr and visualize billing deviations with customizable filters in time series on Lucidworks Banana.
+\item Developed National Access Mgmt. projects progress tracker (full stack) using JavaScript, JSP(Java EE) and integrated it onto AT\&T Access Analytics Tools Platform.
+\item Workflow automation with Jenkins, programming and debugging experience on Hadoop YARN, Spark and Tez.
+\end{rSubsection}
+
+\begin{rSubsection}{Software Engineer Intern}{ARRIS Group}{Shenzhen, China}{Jan. - May 2016}
 \item Automated signal-free wireless testing environment setup and modem performance benchmarking.
 \item Modem routing architecture modification for security reinforcement.
 \end{rSubsection}
 
-\begin{rSubsection}{Technical Solution Intern}{Dalian, China}{Neusoft}{July 2014 - Aug. 2014}
+\begin{rSubsection}{Technical Solution Intern}{Neusoft}{Dalian, China}{July 2014 - Aug. 2014}
 \item Neusoft IM (Instant Message) System development in Java with multithread chating, socket communication, real-time server monitoring and persistent data storage using Oracle DB.
 \end{rSubsection}
 \end{rSection}
@@ -226,6 +232,7 @@ IEEE International Conference on Robotics and Automation (ICRA)\hfill {\emph Sep
 \begin{rSection}{Teaching Experience}
 \begin{rSubsection}{Grader}{College Station, TX}{Texas A\&M University}{Sep. - Dec. 2016}
 \item Test case development and test automation for \href{http://faculty.cse.tamu.edu/dilma/web-csce410-fall16/index.htm}{CSCE410 Operating Systems}, involving frame management, memory paging, virtual memory, thread scheduling, device driver and file systems.
+\item \href{https://github.com/tamu-csce312/hw-test}{Bash scripts} development for automatic grading programming assignments of \href{http://faculty.cse.tamu.edu/djimenez/312/}{CSCE 312 Computer Organization}
 \end{rSubsection}
 
 \begin{rSubsection}{Teaching Assistant}{Weihai, China}{Harbin Inst. of Tech.}{Sep. 2014 - June 2016}
